--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,5 +23,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'French language -- Canada -- Dictionaries'
 - !lcc 'PC'
+- GITenberg
 title: Dictionnaire de nos fautes contre la langue française
 url: http://www.gutenberg.org/ebooks/44354
